--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "express": "3.3.5",
-    "jade": "*"
+    "express-validator": "~0.7.0",
+    "passport": "~0.1.17",
+    "passport-local": "~0.1.6"
   }
 }
