--- a/server/public/client/bower.json
+++ b/server/public/client/bower.json
@@ -8,6 +8,7 @@
     "angular-resource": "~1.0.7",
     "angular-cookies": "~1.0.7",
     "angular-sanitize": "~1.0.7",
+    "angular-http-auth": "*",
     "bootstrap": "~3.0.0-rc1"
   },
   "devDependencies": {
