api(for mobile) support

--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "express-validator": "~0.7.0",
     "passport": "~0.1.17",
     "passport-local": "~0.1.6",
-    "redis": "~0.8.4"
+    "redis": "~0.8.4",
+    "node-uuid": "~1.4.1"
   }
 }
